# NLP-Course-Group-Project

./: Oct_24_data_analysis.py  README.md  clustering_scrypt.ipynb  clustering_walkthrough.ipynb  pyproject.toml
.ipynb_checkpoints/: clustering-checkpoint.py  clustering_scrypt-checkpoint.ipynb  clustering_walkthrough-checkpoint.ipynb  csv_cleaning-checkpoint.py
functions/: clustering.py  csv_cleaning.py
functions/.ipynb_checkpoints/: NLP-checkpoint.py  csv_cleaning-checkpoint.py
