[project]
name = "nlp-course-group-project"
version = "0.1.0"
description = "NLP Final Project: Providing Insight into Popular Song Lyrics from 20th and 21st century"
authors = [
    {name = "lj2496",email = "lj2496@columbia.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "nltk (>=3.9.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
